<?xml version="1.0"?>
<package format="2">
  <name>rubi_server</name>
  <version>1.0.0</version>
  <description>The rubi_server package</description>

  <maintainer email="ave@cezar.info">cezar</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <depend>boost</depend>
  <depend>linux-kernel-headers</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
