<?xml version="1.0"?>
<package format="2">
  <name>rubi_server</name>
  <version>1.0.0</version>
  <description>The rubi_server package</description>

  <maintainer email="ave@cezar.info">cezar</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>boost</depend>
  <depend>linux-kernel-headers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
